--- a/src/app/categories/categories.page.html
+++ b/src/app/categories/categories.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>categories</ion-title>
+    <ion-title>{{'tabs.categories' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
