--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,29 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-title>{{'tabs.home' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-card>
+    <ion-card-header>
+      <ion-img
+        src="https://i0.wp.com/www.medecinealternative.ma/wp-content/uploads/2021/12/les-bons-aliments-pour-prendre-soin-de-sa-prostate.jpeg">
+      </ion-img>
+      <ion-card-subtitle>
+        <router-link>Santé de l'homme</router-link>
+        <router-link>Séxualité</router-link>
+      </ion-card-subtitle>
+      <ion-card-title>Les bons alim la prostate et de l’érection</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Si l’alimentation ne fait pas tout, elle peut aider à se protéger contre certaines maladies comme le cancer de la
+      prostate. Alors, quels aliments privilégier?
+    </ion-card-content>
+    <ion-card-footer>
+      <ion-button color="secondary" expand="full">
+        {{'readmore' | translate}}
+      </ion-button>
+    </ion-card-footer>
+  </ion-card>
 </ion-content>
