--- a/src/app/videos/videos.page.html
+++ b/src/app/videos/videos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>videos</ion-title>
+    <ion-title>{{'tabs.videos' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
