styling home page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,12 @@
-<ion-header>
+<ion-header mode="ios">
   <ion-toolbar>
     <ion-title>{{'tabs.home' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-title>{{'tabs.home' | translate}}</ion-title>
+  <ion-searchbar mode="ios" [placeholder]="'search' | translate"></ion-searchbar>
   <ion-card>
     <ion-card-header>
       <ion-img
