--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,28 +4,24 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-title>{{'tabs.home' | translate}}</ion-title>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">{{'tabs.home' | translate}}</ion-title>
+    </ion-toolbar>
+  </ion-header>
   <ion-searchbar mode="ios" [placeholder]="'search' | translate"></ion-searchbar>
-  <ion-card>
+  <ion-card *ngFor="let post of posts">
     <ion-card-header>
-      <ion-img
-        src="https://i0.wp.com/www.medecinealternative.ma/wp-content/uploads/2021/12/les-bons-aliments-pour-prendre-soin-de-sa-prostate.jpeg">
+      <ion-img [src]="post.jetpack_featured_media_url">
       </ion-img>
       <ion-card-subtitle>
-        <router-link>Santé de l'homme</router-link>
-        <router-link>Séxualité</router-link>
       </ion-card-subtitle>
-      <ion-card-title>Les bons alim la prostate et de l’érection</ion-card-title>
+      <ion-card-title [innerHtml]="post.title.rendered"></ion-card-title>
     </ion-card-header>
-    <ion-card-content>
-      Si l’alimentation ne fait pas tout, elle peut aider à se protéger contre certaines maladies comme le cancer de la
-      prostate. Alors, quels aliments privilégier?
-    </ion-card-content>
-    <ion-card-footer>
-      <ion-button color="secondary" expand="full">
-        {{'readmore' | translate}}
-      </ion-button>
-    </ion-card-footer>
+    <ion-card-content [innerHtml]="post.excerpt.rendered"></ion-card-content>
+    <ion-button color="secondary" expand="full">
+      {{'readmore' | translate}}
+    </ion-button>
   </ion-card>
 </ion-content>
